Back to other style; with speedups

--- a/infra/azure-pipelines/node/job-ui-test-unit.template.yml
+++ b/infra/azure-pipelines/node/job-ui-test-unit.template.yml
@@ -1,17 +1,16 @@
 parameters:
-- name: 'dropName'
-  displayName: "Name of the intermediate drop. Like 'prepare-ui-drop'."
+- name: 'workingDirectory'
+  displayName: "Path to a working directory where yarn can be run. Like 'packages/StewardClient'."
   type: string
 
 jobs:
 - job: UI_Test_Run_Unit_Tests
   displayName: Unit Test
-  variables:
-    dropPath: $(Pipeline.Workspace)/${{parameters.dropName}}
   steps:
   - template: load-yarn-project.template.yml
     parameters:
-      dropName: ${{parameters.dropName}}
+      workingDirectory: ${{parameters.workingDirectory}}
+
   - task: Bash@3
     displayName: ADO Code Coverage
     inputs:
