--- a/infra/azure-pipelines/node/prepare-yarn-project.template.yml
+++ b/infra/azure-pipelines/node/prepare-yarn-project.template.yml
@@ -7,6 +7,9 @@ parameters:
   type: string
 
 steps:
+- checkout: self
+  fetchDepth: 1
+  submodules: false
 - task: Cache@2
   displayName: "Prepare: Cache yarn packages for ${{parameters.workingDirectory}}/yarn.lock"
   inputs:
@@ -31,7 +34,7 @@ steps:
   inputs:
     workingDirectory: ${{parameters.workingDirectory}}
     targetType: 'inline'
-    script: yarn --frozen-lockfile --no-bin-links
+    script: yarn --frozen-lockfile
 
 - task: Bash@3
   displayName: "Prepare: Log Versions"
@@ -44,6 +47,7 @@ steps:
       echo Angular Versions:
       yarn ng version
 
-- publish: ${{parameters.workingDirectory}}
-  displayName: Publish Intermedia Artifact (${{parameters.dropName}})
-  artifact: ${{parameters.dropName}}
+# TODO: I couldn't get this package handoff to work, but if it did work it seems to be faster
+# - publish: ${{parameters.workingDirectory}}
+#   displayName: Publish Intermedia Artifact (${{parameters.dropName}})
+#   artifact: ${{parameters.dropName}}
