--- a/infra/azure-pipelines/node/stage-verify-ui.template.yml
+++ b/infra/azure-pipelines/node/stage-verify-ui.template.yml
@@ -1,18 +1,18 @@
 parameters:
-- name: 'dropName'
-  displayName: "Name of the intermediate drop. Like 'prepare-ui-drop'."
+- name: 'workingDirectory'
+  displayName: 'Path to a working directory where yarn can be run. Like packages/StewardClient'
   type: string
 
 jobs:
 - template: job-ui-test-lint.template.yml
   parameters:
-    dropName: ${{parameters.dropName}}
+    workingDirectory: ${{parameters.workingDirectory}}
 - template: job-ui-test-prettier.template.yml
   parameters:
-    dropName: ${{parameters.dropName}}
+    workingDirectory: ${{parameters.workingDirectory}}
 - template: job-ui-test-build.template.yml
   parameters:
-    dropName: ${{parameters.dropName}}
+    workingDirectory: ${{parameters.workingDirectory}}
 - template: job-ui-test-unit.template.yml
   parameters:
-    dropName: ${{parameters.dropName}}
+    workingDirectory: ${{parameters.workingDirectory}}
