--- a/infra/azure-pipelines/node/job-ui-test-prettier.template.yml
+++ b/infra/azure-pipelines/node/job-ui-test-prettier.template.yml
@@ -14,6 +14,6 @@ jobs:
   - task: Bash@3
     displayName: Prettier Check
     inputs:
-      workingDirectory: $(dropPath)
+      workingDirectory: ${{parameters.workingDirectory}}
       targetType: 'inline'
       script: yarn run build:check:prettier
