Comments on new pipelines

--- a/steward-pr-ui-verify.yml
+++ b/steward-pr-ui-verify.yml
@@ -1,3 +1,12 @@
+# The purpose of this pipeline is to verify the state of
+# packages/StewardClient code being merged into main.
+# It is for use on PRs.
+# 
+# What it does:
+# - Check that StewardClient project will build
+# - Check that StewardClient project complies with linters
+# - Runs StewardClient unit tests and produces a summary
+
 trigger: none
 
 name: $(date:yyyyMMdd)$(rev:.r)_$(SourceBranchName)
