--- a/infra/azure-pipelines/pr-cypress-execute-changed.template.yml
+++ b/infra/azure-pipelines/pr-cypress-execute-changed.template.yml
@@ -1,3 +1,9 @@
+parameters:
+- name: 'timeoutInMinutes'
+  displayName: 'How many minutes to allow tests to run for. Default 10. Total pipeline duration limit is 60m'
+  default: 10
+  type: number
+
 jobs:
 - job: Job_2
   displayName: Cypress (Execute Changed Tests)
@@ -53,7 +59,7 @@ jobs:
   - task: CmdLine@2
     displayName: Execute Changed Specs
     condition: succeededOrFailed()
-    timeoutInMinutes: 10
+    timeoutInMinutes: ${{timeoutInMinutes}}
     env:
       CYPRESS_DEV_CLIENT_SECRET: $(aad-auth-client-secret)
       CYPRESS_DEV_CLIENT_ID: 'cfe0ac3f-d0a7-4566-99f7-0c56b7a9f7d4'
