--- a/steward-pr-cypress-execute-changed.yml
+++ b/steward-pr-cypress-execute-changed.yml
@@ -1,10 +1,16 @@
-# 'Allow scripts to access the OAuth token' was selected in pipeline.  Add the following YAML to any steps requiring access:
-#       env:
-#           MY_ACCESS_TOKEN: $(System.AccessToken)
-# Variable 'Data' was defined in the Variables tab
+# The purpose of this pipeline is to verify Cypree e2e tests being checked in to main.
+# It is for use on PRs.
+# 
+# What it does:
+# - Runs changed StewardClient-Cypress test files (ONLY the changed ones)
+# - Fails if the changed tests take longer than 10m
+# - Produces a report
+
 trigger: none
 
 name: $(date:yyyyMMdd)$(rev:.r)_$(SourceBranchName)
 
 jobs:
 - template: infra/azure-pipelines/pr-cypress-execute-changed.template.yml
+  parameters:
+    timeoutInMinutes: 10
