--- a/steward-pr-cypress-verify.yml
+++ b/steward-pr-cypress-verify.yml
@@ -1,7 +1,11 @@
-# 'Allow scripts to access the OAuth token' was selected in pipeline.  Add the following YAML to any steps requiring access:
-#       env:
-#           MY_ACCESS_TOKEN: $(System.AccessToken)
-# Variable 'Data' was defined in the Variables tab
+# The purpose of this pipeline is to verify the state of
+# packages/StewardClient-Cypress code being merged into main.
+# It is for use on PRs.
+# 
+# What it does:
+# - Check that StewardClient-Cypress project will build
+# - Check that StewardClient-Cypress project complies with linters
+
 trigger: none
 
 name: $(date:yyyyMMdd)$(rev:.r)_$(SourceBranchName)
