--- a/infra/azure-pipelines/node/load-yarn-project.template.yml
+++ b/infra/azure-pipelines/node/load-yarn-project.template.yml
@@ -1,3 +1,7 @@
+# This file contains the prep steps for any node/yarn project.
+# It configures the environment, retrieves packages, and ensures they are cached.
+# It is meant to be run only in situations where `prepare-yarn-project` has cached files, and will refuse to run if it does not locate cached files.
+
 parameters:
 - name: 'workingDirectory'
   displayName: "Path to a working directory where yarn can be run. Like 'packages/StewardClient'."
