--- a/steward-all-pr-2.yml
+++ b/steward-all-pr-2.yml
@@ -2,8 +2,7 @@
 #       env:
 #           MY_ACCESS_TOKEN: $(System.AccessToken)
 # Variable 'Data' was defined in the Variables tab
-trigger:
-- main
+trigger: none
 
 name: $(date:yyyyMMdd)$(rev:.r)_$(SourceBranchName)
 
