--- a/infra/azure-pipelines/dotnet-core/prepare-nuget-project.template.yml
+++ b/infra/azure-pipelines/dotnet-core/prepare-nuget-project.template.yml
@@ -31,6 +31,10 @@ steps:
   condition: ne(variables.CACHE_RESTORED, true)
   inputs:
     command: restore
+    projects: >-
+      ${{parameters.workingDirectory}}/StewardApi/*.csproj
+
+      ${{parameters.workingDirectory}}/StewardApiTest/*.csproj
     selectOrConfig: config
     feedRestore: /2cea4146-e4d1-416d-9823-c02540cc01a9
     nugetConfigPath: ${{parameters.workingDirectory}}/nuget.config
