--- a/packages/StewardApi/StewardApiTest/StewardApiTest.csproj
+++ b/packages/StewardApi/StewardApiTest/StewardApiTest.csproj
@@ -2,10 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-
     <IsPackable>false</IsPackable>
-
     <RootNamespace>Turn10.LiveOps.StewardTest</RootNamespace>
+    <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
