--- a/packages/StewardApi/StewardApi/StewardApi.csproj
+++ b/packages/StewardApi/StewardApi/StewardApi.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
+    <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
     <TargetFramework>net6.0</TargetFramework>
     <LangVersion>9.0</LangVersion>
     <!-- <Nullable>enable</Nullable> -->
