--- a/infra/azure-pipelines/dotnet-core/job-api-test-steward.template.yml
+++ b/infra/azure-pipelines/dotnet-core/job-api-test-steward.template.yml
@@ -1,14 +1,15 @@
 # This file runs a test build as a single parallel job.
-# It is intended to be run only after a `yarn` cache is made.
+# Designed for use with Steward.
+# It is intended to be run only after a `dotnet` cache is made.
 
 parameters:
 - name: 'workingDirectory'
-  displayName: "Path to a working directory where yarn can be run. Like 'packages/StewardClient'."
+  displayName: "Path to a working directory where dotnet can be run. Like 'packages/StewardApi'."
   type: string
 
 jobs:
 - job: API_Test_Build
-  displayName: Build
+  displayName: Build (API)
   steps:
   - template: load-nuget-project.template.yml
     parameters:
@@ -19,8 +20,6 @@ jobs:
     inputs:
       projects: >-
         ${{parameters.workingDirectory}}/StewardApi/*.csproj
-
-        ${{parameters.workingDirectory}}/StewardApiTest/*.csproj
       arguments: /p:DeployOnBuild=true /p:DeployDefaultTarget=WebPublish /p:WebPublishMethod=FileSystem /p:publishUrl="$(Agent.TempDirectory)\WebAppContent\\"
       selectOrConfig: config
       feedRestore: /2cea4146-e4d1-416d-9823-c02540cc01a9
@@ -41,40 +40,8 @@ jobs:
       sevenZipCompression: 5
       archiveFile: $(Build.ArtifactStagingDirectory)/api.zip
 
-  - task: DotNetCoreCLI@2
-    displayName: dotnet test
-    inputs:
-      command: test
-      projects: ${{parameters.workingDirectory}}/StewardApiTest/*.csproj
-      arguments: --filter TestCategory=Unit
-
-  - task: VSTest@2
-    displayName: Test Assemblies
-    enabled: False
-    inputs:
-      testAssemblyVer2: >-
-        **/*${{parameters.workingDirectory}}/StewardApiTest.dll
-
-        !**/obj/**
-      resultsFolder: $(Agent.TempDirectory)/TestResults
-      testFiltercriteria: TestCategory=Unit
-      diagnosticsEnabled: true
-
-  - task: PublishSymbols@2
-    displayName: Publish symbols path
-    enabled: False
-    inputs:
-      SymbolsFolder: ''
-      SymbolServerType: TeamServices
-
   - task: PublishBuildArtifacts@1
     displayName: 'Publish Artifact: api-drop'
     inputs:
       PathtoPublish: $(build.artifactstagingdirectory)
       ArtifactName: api-drop
-
-  - task: PublishPipelineArtifact@1
-    displayName: 'Publish Pipeline Artifact: api-tests'
-    inputs:
-      path: $(System.DefaultWorkingDirectory)
-      artifactName: Steward Test Package
