--- a/packages/StewardClient/package.json
+++ b/packages/StewardClient/package.json
@@ -112,6 +112,7 @@
     "ngx-material-luxon": "^1.1.1",
     "ngx-material-timepicker": "^5.5.3",
     "ngx-pipes": "^2.7.6",
+    "ngx-ui-tour-md-menu": "8.0",
     "rxjs": "^7.5.1",
     "ts-essentials": "^9.3.0",
     "tslib": "^2.3.1",
