--- a/infra/azure-pipelines/dotnet-core/job-api-test-unit.template.yml
+++ b/infra/azure-pipelines/dotnet-core/job-api-test-unit.template.yml
@@ -14,6 +14,8 @@ jobs:
     parameters:
       workingDirectory: ${{parameters.workingDirectory}}
 
+  - task: NuGetAuthenticate@1
+
   - task: DotNetCoreCLI@2
     displayName: dotnet test
     inputs:
