--- a/infra/azure-pipelines/dotnet-core/job-api-test-build-steward.template.yml
+++ b/infra/azure-pipelines/dotnet-core/job-api-test-build-steward.template.yml
@@ -15,6 +15,8 @@ jobs:
     parameters:
       workingDirectory: ${{parameters.workingDirectory}}
 
+  - task: NuGetAuthenticate@1
+
   - task: DotNetCoreCLI@2
     displayName: dotnet build
     inputs:
