--- a/packages/StewardApi/StewardApiTest/Utilities/TestingClient/ServiceClient.csproj
+++ b/packages/StewardApi/StewardApiTest/Utilities/TestingClient/ServiceClient.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <AssemblyName>Turn10.LiveOps.ServiceClient</AssemblyName>
     <RootNamespace>Turn10.Services</RootNamespace>
   </PropertyGroup>
