--- a/packages/StewardApi/.editorconfig
+++ b/packages/StewardApi/.editorconfig
@@ -58,6 +58,9 @@ csharp_style_var_for_built_in_types = false:silent
 csharp_style_var_when_type_is_apparent = false:silent
 csharp_style_var_elsewhere = false:silent
 
+# CA1852: Seal internal types
+dotnet_diagnostic.CA1852.severity = suggestion
+
 [*.{cs,vb}]
 #### Naming styles ####
 
