--- a/packages/StewardApi/StewardApi/StewardApi.csproj
+++ b/packages/StewardApi/StewardApi/StewardApi.csproj
@@ -7,7 +7,7 @@
     <Nullable>disable</Nullable> <!-- TODO: We should probably spend some time to enable this. -->
     <AssemblyName>Turn10.LiveOps.StewardApi</AssemblyName>
     <RootNamespace>Turn10.LiveOps.StewardApi</RootNamespace>
-    <AnalysisMode>Minimum</AnalysisMode>
+    <AnalysisMode>Recommended</AnalysisMode>
     <NoWarn>CA1506,CS0618,NU1701</NoWarn> <!-- Excessive Class Coupling , Obsolete , Restored using another version of .NET-->
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -18,7 +18,7 @@
     <Platforms>AnyCPU;x64</Platforms>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <NoWarn>$(NoWarn);1591</NoWarn>
-    <AnalysisLevel>latest-minimum</AnalysisLevel>
+    <AnalysisLevel>latest-recommended</AnalysisLevel>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
