--- a/steward-pr-api-verify.yml
+++ b/steward-pr-api-verify.yml
@@ -1,11 +1,11 @@
 # The purpose of this pipeline is to verify the state of
-# packages/StewardClient code being merged into main.
+# packages/StewardApi code being merged into main.
 # It is for use on PRs.
 # 
 # What it does:
-# - Check that StewardClient project will build
-# - Check that StewardClient project complies with linters
-# - Runs StewardClient unit tests and produces a summary
+# - Check that StewardApi projects will build
+# - Check that StewardApi project complies with linters. Warnings are treated as errors.
+# - Runs StewardApi unit tests and produces a summary
 
 trigger: none
 
