--- a/packages/StewardApi/StewardApi/StewardApi.csproj
+++ b/packages/StewardApi/StewardApi/StewardApi.csproj
@@ -90,6 +90,10 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="PlayFabAllSDK" Version="1.144.230123" />
     <PackageReference Include="SteelheadLiveOpsContent" Version="1.7.26" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="6.4.0" />
     <PackageReference Include="System.Text.Encodings.Web" Version="5.0.1" />
