--- a/packages/StewardApi/.editorconfig
+++ b/packages/StewardApi/.editorconfig
@@ -166,6 +166,18 @@ dotnet_diagnostic.SA1615.severity = none
 # IDE0007: Use implicit type
 dotnet_diagnostic.IDE0007.severity = suggestion
 
+# SA1204: Static elements should appear before instance elements
+dotnet_diagnostic.SA1204.severity = none
+
+# SA1629: Documentation text should end with a period
+dotnet_diagnostic.SA1629.severity = none
+
+# SA1623: Property summary documentation should match accessors
+dotnet_diagnostic.SA1623.severity = none
+
+# SA1618: Generic type parameters should be documented
+dotnet_diagnostic.SA1618.severity = none
+
 [*.{cs,vb}]
 #### Naming styles ####
 
