Re-enable changelog check

--- a/infra/azure-pipelines/node/stage-verify-ui.template.yml
+++ b/infra/azure-pipelines/node/stage-verify-ui.template.yml
@@ -20,3 +20,6 @@ jobs:
 - template: job-ui-test-unit.template.yml
   parameters:
     workingDirectory: ${{parameters.workingDirectory}}
+- template: job-ui-test-changelog.template.yml
+  parameters:
+    workingDirectory: ${{parameters.workingDirectory}}
