--- a/infra/azure-pipelines/node/job-ui-test-changelog.template.yml
+++ b/infra/azure-pipelines/node/job-ui-test-changelog.template.yml
@@ -8,7 +8,7 @@ parameters:
 
 jobs:
 - job: UI_Test_Changelog
-  displayName: Build
+  displayName: Changelog Must Be Modified
   steps:
   - template: load-yarn-project.template.yml
     parameters:
