--- a/infra/azure-pipelines/node/job-ui-test-changelog.template.yml
+++ b/infra/azure-pipelines/node/job-ui-test-changelog.template.yml
@@ -10,8 +10,7 @@ jobs:
 - job: UI_Test_Changelog
   displayName: Changelog Must Be Modified
   steps:
-  - checkout: main
-    fetchDepth: 1
+  - checkout: self
     submodules: false
 
   - template: load-yarn-project.template.yml
