--- a/infra/azure-pipelines/node/load-yarn-project.template.yml
+++ b/infra/azure-pipelines/node/load-yarn-project.template.yml
@@ -11,6 +11,7 @@ steps:
 - checkout: self
   fetchDepth: 1
   submodules: false
+  persistCredentials: true
 
 # TODO: I couldn't get this package handoff to work, but if it did work it seems to be faster
 # - download: current
