--- a/infra/azure-pipelines/node/job-ui-test-changelog.template.yml
+++ b/infra/azure-pipelines/node/job-ui-test-changelog.template.yml
@@ -14,6 +14,11 @@ jobs:
     parameters:
       workingDirectory: ${{parameters.workingDirectory}}
 
+  - checkout: self
+    fetchDepth: 0
+    submodules: false
+    persistCredentials: true
+
   - task: Bash@3
     displayName: Fetch main
     inputs:
