--- a/packages/StewardApi/StewardApiTest/StewardApiTest.csproj
+++ b/packages/StewardApi/StewardApiTest/StewardApiTest.csproj
@@ -5,9 +5,10 @@
     <IsPackable>false</IsPackable>
     <RootNamespace>Turn10.LiveOps.StewardTest</RootNamespace>
     <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
-    <AnalysisMode>None</AnalysisMode>
+    <AnalysisMode>Recommended</AnalysisMode>
     <NoWarn>CA1506,CS0618,NU1701</NoWarn> <!-- Excessive Class Coupling , Obsolete , Restored using another version of .NET-->
     <Nullable>disable</Nullable> <!-- TODO: We should probably spend some time to enable this. -->
+    <AnalysisLevel>latest-all</AnalysisLevel>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
