Added Crash_Info.log as Exception to gitignore

--- a/packages/StewardClient-Cypress/.gitignore
+++ b/packages/StewardClient-Cypress/.gitignore
@@ -19,6 +19,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
+!2023 03 13 - Crash_Info.log
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
