small fixes and cleanup for swagger

--- a/packages/StewardApi/StewardApi/Properties/launchSettings.json
+++ b/packages/StewardApi/StewardApi/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "IISExpress",
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "local"
       }
     },
     "Browser": {
@@ -21,7 +21,7 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "local"
       }
     }
   }
