--- a/packages/StewardApi/nuget.config
+++ b/packages/StewardApi/nuget.config
@@ -5,5 +5,6 @@
 
     <add key="Turn10-Services" value="https://pkgs.dev.azure.com/turn10/_packaging/Turn10-Services/nuget/v3/index.json" />
     <!-- <add key="nuget.org" value="https://api.nuget.org/v3/index.json" /> -->
+    <add key="Analyzer-Documentation (Local)" value="D:\dev2022\Web-Steward\packages\Analyzer-Documentation\Analyzer_Documentation.Package\bin\Debug" />
   </packageSources>
 </configuration>
