--- a/packages/Analyzer-Documentation/Analyzer_Documentation.CodeFixes/Analyzer_Documentation.CodeFixes.csproj
+++ b/packages/Analyzer-Documentation/Analyzer_Documentation.CodeFixes/Analyzer_Documentation.CodeFixes.csproj
@@ -5,6 +5,7 @@
     <LangVersion>9.0</LangVersion>
     <IsPackable>false</IsPackable>
     <RootNamespace>Analyzer_Documentation</RootNamespace>
+    <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
   </PropertyGroup>
 
   <ItemGroup>
