--- a/packages/Analyzer-Documentation/Analyzer_Documentation/Analyzer_Documentation.csproj
+++ b/packages/Analyzer-Documentation/Analyzer_Documentation/Analyzer_Documentation.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>9.0</LangVersion>
     <IsPackable>false</IsPackable>
+    <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
 
     <!-- Avoid ID conflicts with the package project. -->
     <PackageId>*$(MSBuildProjectFile)*</PackageId>
