--- a/packages/Analyzer-Documentation/Analyzer_Documentation.Test/Analyzer_Documentation.Test.csproj
+++ b/packages/Analyzer-Documentation/Analyzer_Documentation.Test/Analyzer_Documentation.Test.csproj
@@ -6,6 +6,7 @@
 
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType>
+    <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
   </PropertyGroup>
 
   <ItemGroup>
