--- a/packages/Analyzer-Documentation/Analyzer_Documentation.Vsix/Analyzer_Documentation.Vsix.csproj
+++ b/packages/Analyzer-Documentation/Analyzer_Documentation.Vsix/Analyzer_Documentation.Vsix.csproj
@@ -7,6 +7,7 @@
     <LangVersion>9.0</LangVersion>
     <RootNamespace>Analyzer_Documentation.Vsix</RootNamespace>
     <AssemblyName>Analyzer_Documentation.Vsix</AssemblyName>
+    <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
   </PropertyGroup>
 
   <PropertyGroup>
