--- a/infra/azure-pipelines/dotnet-core/nuget/job-nuget-publish-prerelease.template.yml
+++ b/infra/azure-pipelines/dotnet-core/nuget/job-nuget-publish-prerelease.template.yml
@@ -24,7 +24,7 @@ jobs:
       projects: >-
         ${{parameters.workingDirectory}}/StewardApi/*.csproj
       selectOrConfig: config
-      feedRestore: /2cea4146-e4d1-416d-9823-c02540cc01a9
+      feedRestore: 'Turn10-LiveOps'
 
   - task: DotNetCoreCLI@2
     displayName: Pack Nugets
