--- a/infra/azure-pipelines/dotnet-core/nuget/job-nuget-publish-prerelease.template.yml
+++ b/infra/azure-pipelines/dotnet-core/nuget/job-nuget-publish-prerelease.template.yml
@@ -22,7 +22,7 @@ jobs:
     inputs:
       command: build
       projects: >-
-        ${{parameters.workingDirectory}}/StewardApi/*.csproj
+        ${{parameters.workingDirectory}}/**/*.csproj
       selectOrConfig: config
       feedRestore: 'Turn10-LiveOps'
 
