--- a/infra/azure-pipelines/dotnet-core/nuget/job-nuget-publish-prerelease.template.yml
+++ b/infra/azure-pipelines/dotnet-core/nuget/job-nuget-publish-prerelease.template.yml
@@ -38,7 +38,7 @@ jobs:
   - task: PublishBuildArtifacts@1
     displayName: 'Publish Artifact: nuget'
     inputs:
-      PathtoPublish: '$(Build.ArtifactStagingDirectory)/*.nupkg'
+      PathtoPublish: '$(Build.ArtifactStagingDirectory)'
       ArtifactName: ${{parameters.nugetName}}
 
   # Publish
