Isolated dev pipeline test

--- a/packages/StewardClient-Cypress/package.json
+++ b/packages/StewardClient-Cypress/package.json
@@ -20,6 +20,7 @@
     "run:local": "cypress run --config-file cypress/configs/localhost.config.ts",
     "run:local-dev": "cypress run --config-file cypress/configs/localhost-dev.config.ts",
     "run:dev": "cypress run --config-file cypress/configs/dev.config.ts",
+    "run:dev:isolated": "cypress run --config-file cypress/configs/dev-isolated.config.ts",
     "run:prod": "cypress run --config-file cypress/configs/prod.config.ts",
     "run:prod-staging": "cypress run --config-file cypress/configs/prod-staging.config.ts",
     "run:dev:parallel": "cypress-parallel -s run:dev -t 4 -d cypress/e2e",
