--- a/steward-pr-cypress-execute-changed.yml
+++ b/steward-pr-cypress-execute-changed.yml
@@ -19,5 +19,5 @@ jobs:
 - template: infra/azure-pipelines/cypress/job-cypress-execute-changed.template.yml
   parameters:
     timeoutInMinutes: 10
-    command: 'run:dev'
+    command: 'run:dev:isolated'
     label: 'Isolated Dev'
