Update package version?

--- a/packages/Analyzer-Documentation/Analyzer_Documentation.Package/Analyzer_Documentation.Package.csproj
+++ b/packages/Analyzer-Documentation/Analyzer_Documentation.Package/Analyzer_Documentation.Package.csproj
@@ -11,12 +11,17 @@
 
   <PropertyGroup>
     <PackageId>Analyzer_Documentation</PackageId>
-    <PackageVersion>1.1.4.0</PackageVersion>
+
+    <!-- https://andrewlock.net/version-vs-versionsuffix-vs-packageversion-what-do-they-all-mean/ -->
+    <Version>1.1.0</Version>
+    <!-- <PackageVersion>1.1.4.0</PackageVersion> -->
     <Authors>sharerdavid</Authors>
-    <PackageLicenseUrl>http://LICENSE_URL_HERE_OR_DELETE_THIS_LINE</PackageLicenseUrl>
+
+    <!-- <PackageLicenseUrl>http://LICENSE_URL_HERE_OR_DELETE_THIS_LINE</PackageLicenseUrl>
     <PackageProjectUrl>http://PROJECT_URL_HERE_OR_DELETE_THIS_LINE</PackageProjectUrl>
     <PackageIconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</PackageIconUrl>
-    <RepositoryUrl>http://REPOSITORY_URL_HERE_OR_DELETE_THIS_LINE</RepositoryUrl>
+    <RepositoryUrl>http://REPOSITORY_URL_HERE_OR_DELETE_THIS_LINE</RepositoryUrl> -->
+
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <Description>Analyzer_Documentation</Description>
     <PackageReleaseNotes>Summary of changes made in this release of the package.</PackageReleaseNotes>
@@ -26,8 +31,6 @@
     <NoPackageAnalysis>true</NoPackageAnalysis>
 
     <TargetsForTfmSpecificContentInPackage>$(TargetsForTfmSpecificContentInPackage);_AddAnalyzersToOutput</TargetsForTfmSpecificContentInPackage>
-
-    <Version>$(VersionPrefix)</Version>
   </PropertyGroup>
 
   <ItemGroup>
